# issue-fixer

./: .env.example  .gitignore  Dockerfile  README.md  README_zh-CN.md  action.yml  entrypoint.sh  pyproject.toml
examples/: workflow-example.yml
issue_fixer/: __init__.py  analyzer.py  code_indexer.py  config.py  dependency.py  feedback.py  github_client.py  lang_prompts.py  main.py  notifier.py  patcher.py  plugins.py  sandbox.py  scoring.py  test_runner.py
issue_fixer/agents/: __init__.py  analyzer_agent.py  base.py  context.py  fix_agent.py  orchestrator.py  review_agent.py  search_agent.py
issue_fixer/web/: __init__.py  app.py  dashboard.html  index.html
